traefik/08ingresscontroler.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: traefik-web-ui
 namespace: traefik
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: "traefik.mon.dom"
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: traefik-web-ui
           port:
             number: 80
 - host: "w1.mon.dom"
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: w1
           port:
             number: 80

# - host: "w2.mon.dom"
#   http:
#     paths:
#     - path: /
#       pathType: Prefix
#       backend:
#         service:
#           name: w2
#           port:
#             number: 80
