traefik/ingresscontroler.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: traefik-web-ui
 namespace: traefik
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: "traefik.mon.dom"
   http:
     paths:
     - backend:
         serviceName: traefik-web-ui
         servicePort: 80 
# - host: "w1.mon.dom"
#   http:
#     paths:
#     - path: /
#       backend:
#         serviceName: w1
#         servicePort: 80
